--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -4,7 +4,7 @@ import Layout from "../layouts/Layout.astro";
 
 changeLanguage("en");
 
-setDefaultNamespace("common");
+setDefaultNamespace("about");
 ---
 
 <Layout>
