--- a/src/components/PageTransition.astro
+++ b/src/components/PageTransition.astro
@@ -1,34 +1,7 @@
-<div id="page-cover" />
-
-<style>
-    #page-cover {
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        z-index: 4;
-        background-image: radial-gradient(circle, var(--primary-color) 0%, #0000 0%);
-        pointer-events: none;
-    }
-</style>
-
 <script>
-    document.addEventListener("astro:before-preparation", () => {
-        gsap.fromTo("#page-cover", {
-            background: "radial-gradient(circle, var(--primary-color) 0%, #0000 0%)"
-        }, {
-            duration: 1,
-            background: "radial-gradient(circle, var(--primary-color) 100%, #0000 100%)",
-        });
+    // on navigate cancel the navigation for 1 second
+    document.addEventListener("astro:before-preparation", (e) => {
+        lenis.scrollTo(0);
+        console.log("before-preparation");
     });
-    document.addEventListener("astro:page-load", () => {
-        gsap.fromTo("#page-cover", {
-            background: "radial-gradient(circle, #0000 0%, var(--primary-color) 0%)"
-        }, {
-            duration: 1,
-            delay: .5,
-            background: "radial-gradient(circle, #0000 100%, var(--primary-color) 100%)",
-        });
-    })
 </script>
