--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
 import { changeLanguage, setDefaultNamespace } from "i18next";
 import Layout from "../layouts/Layout.astro";
-import Separator from "../components/Separator.astro";
+import Separator from "../components/decorations/Separator.astro";
 
 changeLanguage("en");
 setDefaultNamespace("home");
