--- a/src/components/decorations/Plants.astro
+++ b/src/components/decorations/Plants.astro
@@ -2,17 +2,17 @@
 // This component is meant to be used inside a page size container with position relative
 import { Image } from 'astro:assets';
 
-import big1 from '../assets/decorations/plants/big-1.png';
-import big2 from '../assets/decorations/plants/big-2.png';
-import big3 from '../assets/decorations/plants/big-3.png';
-import big4 from '../assets/decorations/plants/big-4.png';
+import big1 from '../../assets/decorations/plants/big-1.png';
+import big2 from '../../assets/decorations/plants/big-2.png';
+import big3 from '../../assets/decorations/plants/big-3.png';
+import big4 from '../../assets/decorations/plants/big-4.png';
 
-import small1 from '../assets/decorations/plants/small-1.png';
+import small1 from '../../assets/decorations/plants/small-1.png';
 
-import tiny1 from '../assets/decorations/plants/tiny-1.png';
-import tiny3 from '../assets/decorations/plants/tiny-3.png';
-import tiny4 from '../assets/decorations/plants/tiny-4.png';
-import tiny5 from '../assets/decorations/plants/tiny-5.png';
+import tiny1 from '../../assets/decorations/plants/tiny-1.png';
+import tiny3 from '../../assets/decorations/plants/tiny-3.png';
+import tiny4 from '../../assets/decorations/plants/tiny-4.png';
+import tiny5 from '../../assets/decorations/plants/tiny-5.png';
 
 const positions: { src: ImageMetadata, style: string, className: string }[] = [
     // bottom left
@@ -47,7 +47,7 @@ const positions: { src: ImageMetadata, style: string, className: string }[] = [
     document.addEventListener('astro:page-load', () => {
         const scrollTrigger = {
             trigger: 'header',
-            start: 'top 100',
+            start: 'top 80',
             end: 'bottom top',
             scrub: 1,
         };
@@ -61,8 +61,8 @@ const positions: { src: ImageMetadata, style: string, className: string }[] = [
         });
         gsap.to('.tiny, .small', {
             scrollTrigger,
-            y: () => -Math.random() * 300,
-            rotate: () => Math.random() * 360,
+            y: () => -50 -Math.random() * 400,
+            rotate: () => Math.random() * 200,
         });
     });
 </script>
