--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -81,7 +81,7 @@ import { slideCustom } from "../scripts/transitions";
 			--primary-color: #5a795c;;
 			--secondary-color: #e0bf29;
 			--background-1: #e6e6e6;
-			--background-2: #e7e7e7;
+			--background-2: #cddacd;
 			--text-color: #111;
 			--text-color-bright: #f5f3eb;
 			--line-width: 0.07rem;
@@ -100,7 +100,7 @@ import { slideCustom } from "../scripts/transitions";
 
 		body {
 			color: var(--text-color-1);
-			background: var(--background-2);
+			background: var(--background-1);
 			background-repeat: no-repeat;
 			background-size: cover;
 			font-family: "Montserrat", sans-serif;
