--- a/src/components/home/ProjectText.astro
+++ b/src/components/home/ProjectText.astro
@@ -28,8 +28,8 @@ const { title, big=false } = Astro.props;
         position: absolute;
         top: -1.5em;
         left: -.5em;
-        background-color: var(--background-2);
-        border: solid var(--line-width) var(--text-color);
+        background-color: var(--primary-color);
+        color: var(--text-color-bright);
         padding: 0.5em;
         font-size: 1.5rem;
         font-weight: 500;
@@ -38,15 +38,17 @@ const { title, big=false } = Astro.props;
         position: relative;
         width: 100%;
         height: 80%;
+        background-color: var(--background-1);
     }
     .text {
         display: block;
         width: 100%;
         padding: 1rem;
         padding-top: 1.5rem;
-        font-size: 1rem;
+        font-size: 1.1rem;
         border: solid var(--line-width) var(--text-color);
-        background-color: var(--background-2);
+        border-left: 0;
+        border-right: 0;
         max-height: 70vh;
         overflow-y: auto;
     }
