better landing page

--- a/src/components/home/ProjectText.astro
+++ b/src/components/home/ProjectText.astro
@@ -47,8 +47,8 @@ const { title, big=false } = Astro.props;
         padding-top: 1.5rem;
         font-size: 1.1rem;
         border: solid var(--line-width) var(--text-color);
-        border-left: 0;
-        border-right: 0;
+        border-top: 0;
+        border-bottom: 0;
         max-height: 70vh;
         overflow-y: auto;
     }
