--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -80,7 +80,7 @@ import { slideCustom } from "../scripts/transitions";
 		:root {
 			--primary-color: #5a795c;;
 			--secondary-color: #e0bf29;
-			--background-1: #e6e6e6;
+			--background-1: #ffffff;
 			--background-2: #cddacd;
 			--text-color: #111;
 			--text-color-bright: #f5f3eb;
