--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,25 +1,31 @@
 ---
 import { changeLanguage, setDefaultNamespace } from "i18next";
 import Layout from "../layouts/Layout.astro";
-import Separator from "../components/decorations/Separator.astro";
+import { getCollection } from "astro:content";
+import { Image } from "astro:assets";
 
 changeLanguage("en");
 setDefaultNamespace("home");
 
-const projects = await Astro.glob("../content/projects/*.mdx");
-projects.sort((a, b) => b.frontmatter.relevance - a.frontmatter.relevance);
+
+const projects = await getCollection("project");
+projects.sort((a, b) => b.data.relevance - a.data.relevance);
 ---
 
 <Layout>
-	{projects.map((project) => (
-        <Separator />
-        <h2 class="project-title">{project.frontmatter.title}</h2>
-        <section class="project">
-            <div class="content">
-                <project.Content />
-            </div>
-        </section>
-    ))}
+    <div class="projects">
+        {projects.map((project) => (
+            <section class="project-card">
+                <div class="project-cover-wrap">
+                    <Image src={project.data.cover} alt={project.data.title} class="project-cover" />
+                </div>
+                <h2 class="project-title">{project.data.title}</h2>
+                <p class="project-text">
+                    {project.data.description}
+                </p>
+            </section>
+        ))}
+    </div>
 </Layout>
 
 <script>
@@ -27,38 +33,53 @@ projects.sort((a, b) => b.frontmatter.relevance - a.frontmatter.relevance);
 </script>
 
 <style>
-    section {
-        position: relative;
-        overflow: hidden;
-        border-bottom: solid var(--line-width) var(--text-color);
-    }
-	h2 {
-        font-size: 3rem;
-        padding: 0 .5rem;
-        text-align: center;
-        font-weight: 400;
-        width: fit-content;
-        margin: auto;
-        font-family: "Roxie Rossa", serif;
-    }
-    @media screen and (min-width: 1000px) {
-        h2 {
-            font-size: 4rem;
-        }
-    }
-    .content {
-        margin-top: 3rem;
-        position: relative;
+    .projects {
         display: grid;
-        grid-template-rows: repeat(2, 45%);
-        grid-auto-flow: column;
+        grid-template-columns: repeat(auto-fill, minmax(min(40rem, 90vw), 1fr));
         justify-content: center;
         align-items: center;
-        height: 90vh;
-        min-width: 100%;
-        width: max-content;
-        row-gap: 2rem;
-        column-gap: 10vw;
-        padding: 1rem 2vw;
+        gap: 1rem;
+        width: 100vw;
+        padding: 8rem 0;
+    }
+	h2 {
+        margin: 1rem .5rem;
+        font-size: 3rem;
+        font-weight: 400;
+        font-family: "Roxie Rossa", serif;
+        border: solid var(--line-width) var(--text-color);
+        border-right: none;
+        border-left: none;
+        width: fit-content;
+        padding: .25rem 1rem;
+    }
+
+    .project-card {
+        width: min(90%, 40rem);
+        margin: auto;
+    }
+
+    .project-text {
+        font-size: 1.2rem;
+        line-height: 1.5;
+        border: solid var(--line-width) var(--text-color);
+        border-top: none;
+        border-bottom: none;
+        padding: 1rem;
+        width: min(90%, 30rem);
+        margin: 1rem 0;
+        margin-left: 8%;
+    }
+
+    .project-cover-wrap {
+        width: 100%;
+        max-width: 95vw;
+        height: 30rem;
+    }
+    .project-cover {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        object-position: 0% 0%;
     }
 </style>
