page per project

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,15 +1,15 @@
 ---
 import { changeLanguage, setDefaultNamespace, t } from "i18next";
-import Layout from "../layouts/Layout.astro";
+import MainPage from "../layouts/MainPage.astro";
 
 changeLanguage("en");
 
 setDefaultNamespace("about");
 ---
 
-<Layout>
+<MainPage>
     
-</Layout>
+</MainPage>
 
 <style>
 	
