--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
 import { changeLanguage, setDefaultNamespace } from "i18next";
-import Layout from "../layouts/Layout.astro";
+import MainPage from "../layouts/MainPage.astro";
 import { getCollection } from "astro:content";
 import { Image } from "astro:assets";
 
@@ -12,10 +12,10 @@ const projects = await getCollection("project");
 projects.sort((a, b) => b.data.relevance - a.data.relevance);
 ---
 
-<Layout>
-    <div class="projects">
+<MainPage>
+    <section class="projects">
         {projects.map((project) => (
-            <section class="project-card">
+            <a class="project-card" href={`/project/${project.slug}`}>
                 <div class="project-cover-wrap">
                     <Image src={project.data.cover} alt={project.data.title} class="project-cover" />
                 </div>
@@ -23,10 +23,10 @@ projects.sort((a, b) => b.data.relevance - a.data.relevance);
                 <p class="project-text">
                     {project.data.description}
                 </p>
-            </section>
+            </a>
         ))}
-    </div>
-</Layout>
+    </section>
+</MainPage>
 
 <script>
     import '../scripts/home';
@@ -57,6 +57,8 @@ projects.sort((a, b) => b.data.relevance - a.data.relevance);
     .project-card {
         width: min(90%, 40rem);
         margin: auto;
+        color: var(--text-color);
+        text-decoration: none;
     }
 
     .project-text {
