--- a/src/layouts/MainPage.astro
+++ b/src/layouts/MainPage.astro
@@ -19,7 +19,7 @@ import { t } from "i18next";
 				{t("meta.scroll-cta")}
 			</p>
 			<Separator animate />
-			<Plants transition:persist />
+			<Plants />
 		</header>
 
         <slot />
