--- a/src/styles/transitions.css
+++ b/src/styles/transitions.css
@@ -1,3 +1,21 @@
+@keyframes circleIn {
+    from {
+        clip-path: circle(0% at 50% 50%);
+    }
+    to {
+        clip-path: circle(150% at 50% 50%);
+    }
+}
+
+@keyframes circleOut {
+    from {
+        clip-path: circle(150% at 50% 50%);
+    }
+    to {
+        clip-path: circle(0% at 50% 50%);
+    }
+}
+
 @keyframes slideToLeft {
     from {
         transform: none;
