more acceptable main page

--- a/src/components/Scroll.astro
+++ b/src/components/Scroll.astro
@@ -9,4 +9,8 @@
     })
 
     gsap.ticker.lagSmoothing(0);
+
+    document.addEventListener('astro:before-swap', () => {
+        lenis.scrollTo(0, { immediate: true });
+    })
 </script>
