--- a/src/components/decorations/Plants.astro
+++ b/src/components/decorations/Plants.astro
@@ -1,6 +1,6 @@
 ---
 // This component is meant to be used inside a page size container with position relative
-import { Image } from 'astro:assets';
+import { Image, getImage } from 'astro:assets';
 
 import big1 from '../../assets/decorations/plants/big-1.png';
 import big2 from '../../assets/decorations/plants/big-2.png';
