--- a/src/layouts/MainPage.astro
+++ b/src/layouts/MainPage.astro
@@ -6,6 +6,11 @@ import { slideCustom } from "../scripts/transitions";
 import { t } from "i18next";
 ---
 
+<head>
+	<meta name="description" content={t("meta.description")} />
+	<title>{t("meta.title")}</title>
+</head>
+
 <Layout>
     <!--
 			Header, common to every page
