--- a/src/layouts/MainPage.astro
+++ b/src/layouts/MainPage.astro
@@ -6,10 +6,8 @@ import { slideCustom } from "../scripts/transitions";
 import { t } from "i18next";
 ---
 
-<head>
-	<meta name="description" content={t("meta.description")} />
-	<title>{t("meta.title")}</title>
-</head>
+<meta name="description" content={t("meta.description")} slot="head"/>
+<title slot="head">{t("meta.title")}</title>
 
 <Layout>
     <!--
