--- a/src/components/decorations/Cog.astro
+++ b/src/components/decorations/Cog.astro
@@ -37,9 +37,10 @@ const toothLength = size * 3;
         border-radius: 20px;
     }
     .circle {
-        border: solid 3px var(--text-color);
+        border: solid 2px var(--text-color);
         border-radius: 50%;
         width: 100%;
         height: 100%;
+        background-color: var(--background-1);
     }
 </style>
