--- a/src/pages/process.astro
+++ b/src/pages/process.astro
@@ -1,7 +1,9 @@
 ---
-import { changeLanguage, setDefaultNamespace } from "i18next";
+import { changeLanguage, setDefaultNamespace, t } from "i18next";
 import MainPage from "../layouts/MainPage.astro";
 import Cog from "../components/decorations/Cog.astro";
+import { Trans } from "astro-i18next/components";
+import Separator from "../components/decorations/Separator.astro";
 
 changeLanguage("en");
 
@@ -12,23 +14,125 @@ setDefaultNamespace("process");
 
 <MainPage>
     <div class="project-box">
-        <Cog size={18} />
-        <Cog size={8} clockwise={false} />
-        <Cog size={6} />
-        <Cog size={12} clockwise={false} />
+        <div class="eater" />
+        <div id="cog-1" class="cog-wrap">
+            <Cog size={10} />
+        </div>
+        <div id="cog-2" class="cog-wrap">
+            <Cog size={12} clockwise={false} />
+        </div>
+        <div id="cog-3" class="cog-wrap">
+            <Cog size={16} offset={16} />
+        </div>
+
+        <div id="cog-4" class="cog-wrap">
+            <Cog size={10} />
+        </div>
+        <div id="cog-5" class="cog-wrap">
+            <Cog size={8} clockwise={false} offset={25} />
+        </div>
+        <div class="style" />
+        <p class="display">
+            Project
+        </p>
     </div>
+
+    <section>
+        <h2 id="step-1">{t('step-1.title')}</h2>
+        <Fragment set:html={t('step-1.texts')} />
+    </section>
+
+    <Separator />
+
+    <section>
+        <h2 id="step-2" data-text-change={`${t('step-2.text-change')}`}>
+            Step 2: Chatting
+        </h2>
+        <Fragment set:html={t('step-2.texts')} />
+    </section>
+
+    <Separator />
+
+    <section>
+        <h2 id="step-3" data-text-change={`${t('step-3.text-change')}`}>
+            {t('step-3.title')}
+        </h2>
+        <Fragment set:html={t('step-3.texts')} />
+    </section>
+
     <script>
         import '../scripts/cogs'
     </script>
 </MainPage>
 
+<script>
+    import '../scripts/process';
+</script>
+
 <style>
 	.project-box {
-        width: 100%;
-        height: 100vh;
+        position: relative;
+        width: min(20rem, 95vw);
+        height: 12rem;
+        margin: 5rem auto;
+        font-family: 'Courier New', monospace;
         display: flex;
-        gap: 15px;
         justify-content: center;
         align-items: center;
+        z-index: 2;
+    }
+    .eater {
+        position: absolute;
+        top: -10rem;
+        height: calc(100% + 10rem);
+        width: 100vw;
+        /* When things don't have time to disappear, they will thanks to that eater */
+        background: linear-gradient(180deg, var(--background-1) 10rem, #ffffff00);
+        z-index: 1;
+    }
+    .project-box .style {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        z-index: 1;
+        background-color: var(--background-1);
+        border: solid var(--line-width) var(--text-color);
+    }
+    .project-box .display {
+        font-size: 1.5rem;
+        z-index: 2;
+    }
+    .cog-wrap {
+        position: absolute;
+        z-index: 1;
+    }
+    #cog-1 { left: 8rem; top: -2rem; }
+    #cog-2 { left: 2.8rem; top: -1rem; }
+    #cog-3 { left: -2rem; top: 3rem; }
+    
+    #cog-4 { right: 2.2rem; bottom: -1rem; }
+    #cog-5 { right: -1.5rem; bottom: -1.5rem; }
+
+    .project-box.simple {
+        border: solid var(--line-width) var(--text-color);
+    }
+
+    section {
+        margin: 5rem auto;
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+        height: max(60vh, 30rem);
+        width: min(40rem, 90vw);
+    }
+
+    h2 {
+        font-size: 4rem;
+        text-align: center;
+    }
+
+    :global(section p) {
+        font-size: 1.2rem;
+        line-height: 1.5;
     }
 </style>
