--- a/src/pages/process.astro
+++ b/src/pages/process.astro
@@ -31,7 +31,17 @@ setDefaultNamespace("process");
         <div id="cog-5" class="cog-wrap">
             <Cog size={8} clockwise={false} offset={25} />
         </div>
+
+        <div id="cog-6" class="cog-wrap">
+            <Cog size={9} />
+        </div>
+
         <div class="style" />
+
+        <div class="drop" id="drop-1" style="background-color: red; color:aliceblue;" />
+        <div class="drop" id="drop-2" style="background-color: blue; color:brown;" />
+        <div class="drop" id="drop-3" style="background-color: purple; color:green;" />
+
         <p class="display">
             Project
         </p>
@@ -58,6 +68,13 @@ setDefaultNamespace("process");
             {t('step-3.title')}
         </h2>
         <Fragment set:html={t('step-3.texts')} />
+    </section>
+
+    <section>
+        <h2 id="step-4" data-text-change={`${t('step-4.text-change')}`}>
+            {t('step-4.title')}
+        </h2>
+        <Fragment set:html={t('step-4.texts')} />
     </section>
 
     <script>
@@ -113,8 +130,17 @@ setDefaultNamespace("process");
     #cog-4 { right: 2.2rem; bottom: -1rem; }
     #cog-5 { right: -1.5rem; bottom: -1.5rem; }
 
-    .project-box.simple {
-        border: solid var(--line-width) var(--text-color);
+    #cog-6 { right: -1rem; top: 3rem; }
+
+    .drop {
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+        width: 1rem;
+        height: 1rem;
+        border-radius: 50%;
+        z-index: 1;
     }
 
     section {
@@ -122,17 +148,18 @@ setDefaultNamespace("process");
         display: flex;
         flex-direction: column;
         gap: 1rem;
-        height: max(60vh, 30rem);
         width: min(40rem, 90vw);
+        min-height: 30rem;
     }
 
     h2 {
-        font-size: 4rem;
+        font-size: 3rem;
         text-align: center;
     }
 
     :global(section p) {
-        font-size: 1.2rem;
+        font-size: 1.5rem;
         line-height: 1.5;
+        margin-top: 5rem;
     }
 </style>
