cleanup and bugfix

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -86,6 +86,17 @@ import Scroll from "../components/Scroll.astro";
 			overflow-x: hidden;
 		}
 
+		#zoom-container {
+			position: fixed;
+			top: 0;
+			left: 0;
+			width: 100vw;
+			height: 100vh;
+			pointer-events: none;
+			overflow: hidden;
+			z-index: 1000;
+		}
+
 		html.lenis, html.lenis body {
 			height: auto;
 		}
