--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -43,7 +43,7 @@ import Scroll from "../components/Scroll.astro";
 		<slot />
 		<Scroll />
 
-		<div id="zoom-container" />
+		<div id="zoom-container" transition:persist />
 	</body>
 
 	<style is:global>
@@ -95,6 +95,33 @@ import Scroll from "../components/Scroll.astro";
 			pointer-events: none;
 			overflow: hidden;
 			z-index: 1000;
+		}
+
+		.medium-zoom-image--opened {
+			position: relative;
+			cursor: pointer;
+			cursor: zoom-out;
+			will-change: transform;
+		}
+		.medium-zoom-image {
+			cursor: pointer;
+			cursor: zoom-in;
+			transition: transform .3s cubic-bezier(.2,0,.2,1) !important;
+		}
+		.medium-zoom--opened .medium-zoom-overlay {
+			cursor: pointer;
+			cursor: zoom-out;
+			opacity: 1;
+		}
+		.medium-zoom-overlay {
+			position: fixed;
+			top: 0;
+			right: 0;
+			bottom: 0;
+			left: 0;
+			opacity: 0;
+			transition: opacity .3s;
+			will-change: opacity;
 		}
 
 		html.lenis, html.lenis body {
